# norby

./: README.md  install.sh  requirements.txt
scripts/: update_worlds.py
src/norby_webots_drivers/: package.xml  setup.cfg  setup.py
src/norby_webots_drivers/config/: nav_params.yml  ros2control.yml  slam_config.yml
src/norby_webots_drivers/launch/: controllers.launch.py  navigation.launch.py  robot.launch.py  slam.launch.py  webots_only.launch.py
src/norby_webots_drivers/norby_webots_drivers/: camera_node.py  controller_node.py  lidar_node.py  object_tracker_node.py  radar_node.py
src/norby_webots_drivers/object_tracking/: package.xml  setup.py
src/norby_webots_drivers/object_tracking/object_tracking/: object_detector.py  object_tracker.py  radar_object_tracker_node.py  track_objects.py
src/norby_webots_drivers/object_tracking/object_tracking/configs/: coco-yolov4-tiny.cfg  signs-yolov4-tiny.cfg  signs-yolov4-tiny2.cfg  signs-yolov4-tiny3.cfg  signs-yolov4-tiny4.cfg  signs-yolov4-tiny5.cfg  signs-yolov4-tiny6.cfg  signs-yolov4-tiny7.cfg  signs-yolov4-tiny8.cfg  signs-yolov4.cfg
src/norby_webots_drivers/object_tracking/object_tracking/models/: coco.data  signs.data  signs2.data  signs3.data  signs4.data  signs5.data  signs6.data  signs7.data  signs8.data
src/norby_webots_drivers/object_tracking/object_tracking/models/data/: classes.names
src/norby_webots_drivers/object_tracking/object_tracking/weights/: .gitkeep
src/norby_webots_drivers/test/: test_integration.py
src/norby_webots_drivers/urdf/: Robot.proto  TurtleBot3Burger.urdf  webots.urdf
src/norby_webots_drivers/worlds/: apartment.wbt  tmpx0c396nk_world_with_URDF_robot.wbt  turtlebot3_burger.wbt  turtlebot_extension_slot.inc.wbt
worlds/: .empty.wbproj  .turtlebot3_burger.wbproj  empty.wbt
